# tds-project-2

./: .env.example  Dockerfile  README.md  agent.py  main.py  prompts.py  pyproject.toml  requirements.txt  solver.py  test_local.py
tools/: __init__.py  image_content_extracter.py  read_file.py  run_code.py  take_screenshot.py
